--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react": "^18.2.0",
     "react-dock": "^0.6.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
