--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
     "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-dock": "^0.6.0",
@@ -18,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
