--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gabriel123rodrigues.github.io/marketplacepetshop",
+  "homepage": "https://gabriel123rodrigues.github.io/petfood",
   "name": "web",
   "version": "0.1.0",
   "private": true,
